# sasya-chikitsa

./: .gitignore  README.md  requirements.txt
engine/: Dockerfile  Dockerfile.api  Dockerfile.ollamamodel  README.md  agent_server.py  pyproject.toml  requirements.txt
engine/agents/: DEPENDENCY_RESOLUTION.md  IMPLEMENTATION_SUMMARY.md  VISUAL_ARCHITECTURE.md  requirements.txt  run_planning_server.sh
engine/agents/components/: classification.py  prescription.py
engine/agents/server/: planning_agent.py
engine/agents/session/: session_manager.py
engine/agents/tests/: test_streaming_classification.sh
engine/api/: agent_api.py  agent_core.py  agent_server.py  server.py
engine/fsm_agent/: README.md  VISUAL_ARCHITECTURE.md  VISUAL_ARCHITECTURE_GITHUB.md  __init__.py  requirements.txt  test_chromadb_filters.py  test_clean_streaming.py  test_delta_streaming.py  test_filter_logic.py  test_general_questions.py  test_langgraph_updates_format.py  test_llm_intent.py  test_rag_filters.py  test_streaming_response_fix.py
engine/fsm_agent/core/: fsm_agent.py  langgraph_workflow.py  langgraph_workflow_refactored.py  session_manager.py  (+1 more)
engine/ml/: cnn_attn_classifier_improved.py  cnn_with_attention_classifier.py  label_mappings.py
engine/rag/: Dockerfile.ollama  Dockerfile.rag_with_ollama  Dockerfile.rag_with_ollama_fastapi  README.md  docker-compose.yml  embeddings_creation.ipynb  rag_with_groq.ipynb  rag_with_ollama.py  rag_with_ollama_fastapi.py  requirements.txt  test_chromadb.py
server/api/: Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
(+117 files in other folders)
