[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "opencv-python-headless>=4.11.0.86",
    "python-multipart>=0.0.20",
    "tensorflow>=2.20.0",
    "typing-extensions>=4.14.1",
    "typing-inspection>=0.4.1",
    "uvicorn>=0.35.0",
]
